# innkeeper

./: AGENTS.md  Cargo.toml  README.md  innkeeper.conf.example
.github/workflows/: release.yml
documentation/: 001_design.md  002_plan.md  003_refactoring_plan.md  005_feature_parity.md  006_refactoring.md
resources/: achievements.csv
src/: main.rs
src/bridge/: channels.rs  filter.rs  mod.rs  orchestrator.rs  state.rs
src/common/: error.rs  messages.rs  mod.rs  reconnect.rs  resources.rs  types.rs
src/config/: env.rs  mod.rs  parser.rs  types.rs  validate.rs
src/discord/: bot.rs  client.rs  commands.rs  dashboard.rs  handler.rs  mod.rs  resolver.rs
src/game/: bridge.rs  client.rs  filter.rs  formatter.rs  mod.rs  router.rs
src/protocol/: mod.rs
src/protocol/game/: chat.rs  connector.rs  guild.rs  handler.rs  header.rs  mod.rs  packets.rs
src/protocol/packets/: codec.rs  mod.rs  opcodes.rs
src/protocol/realm/: connector.rs  handler.rs  mod.rs  packets.rs
